WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278873
Fix issue with notificationclick/close at launch
https://bugs.webkit.org/show_bug.cgi?id=278873
Summary
Fix issue with notificationclick/close at launch
Brady Eidson
Reported
2024-08-29 11:27:17 PDT
Fix issue with notificationclick/close at launch
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-29 11:27:47 PDT
<
rdar://problem/134953334
>
EWS
Comment 2
2024-08-29 12:47:31 PDT
Committed
282919@main
(adf7818ea55a): <
https://commits.webkit.org/282919@main
> Reviewed commits have been landed. Closing PR #32899 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug