Fix issue with notificationclick/close at launch rdar://134953334 https://bugs.webkit.org/show_bug.cgi?id=278873

Reviewed by Ben Nham.

There needs to be *a* UNUserNotificationCenter delegate installed to get notification related events at launch,
even if it does nothing.
So let's install one.

* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStore.mm:
(-[_WKWebsiteDataStoreNotificationCenterDelegate userNotificationCenter:didReceiveNotificationResponse:withCompletionHandler:]):
(+[WKWebsiteDataStore _setWebPushActionHandler:]):

Canonical link: https://commits.webkit.org/282919@main